--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
     }
 
 }
@@ -47,12 +48,6 @@ repositories {
     }
 }
 
-buildscript {
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-    }
-}
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin/'
     test.java.srcDirs += 'src/test/kotlin/'
@@ -67,10 +62,29 @@ jar {
     // files or particular types at will
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
-
+apply plugin: 'org.junit.platform.gradle.plugin'
 dependencies {
+    testCompile("org.junit.jupiter:junit-jupiter-api:$versions.junitJupiter")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:$versions.junitJupiter")
     compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
     compile 'org.reactivestreams:reactive-streams:1.0.0.final'
     compile 'io.reactivex.rxjava2:rxkotlin:2.0.0'
 }
 
+junitPlatform {
+    // platformVersion '1.0.0-M4'
+    filters {
+        engines {
+            // include 'junit-jupiter', 'junit-vintage'
+            // exclude 'custom-engine'
+        }
+        tags {
+            // include 'fast'
+            exclude 'slow'
+        }
+        // includeClassNamePattern '.*Test'
+    }
+    // enableStandardTestTask true
+    // reportsDir file('build/test-results/junit-platform') // this is the default
+    logManager 'org.apache.logging.log4j.jul.LogManager'
+}
