--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,5 @@
 ext.versions = [
-        kotlin      : "1.1.2",
+        kotlin      : "1.1.2-2",
         junitJupiter: "5.0.0-M4",
         rx          : "2.0.0"
 ]
